<resources>
    <string name="app_name">Gen BI</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="desc_gen_baru_indo">Bermula dari obrolan santai saat berbuka puasa bersama usai acara penandatanganan perjanjian kerjasama pemberian Beasiswa antara Bank Indonesia dengan Universitas Indonesia, Universitas Islam Negeri Syarif Hidayatullah, Institut Pertanian Bogor dan Universitas Negeri Jakarta pada 3 Agustus 2011, muncul wacana untuk membentuk wadah berhimpun (komunitas) untuk menjalin komunikasi dan interaksi, saling menginspirasi, memotivasi serta menjalin sinergi antar sesama mahasiswa penerima Beasiswa Bank Indonesia.\n
Pada saat itu muncul beberapa kesepakatan, diantaranya adalah; nama dan lambang untuk Komunitas Penerima Beasiswa Bank Indonesia adalah Generasi Baru Indonesia (GenBI), membentuk tim perumus dan kelompok kerja yang bertugas untuk merencanakan pertemuan umum dan deklarasi yang akan dilaksanakan pada 11 November 2011 (11-11-11) serta menyusun rancangan Konstitusi Organisasi (Statuta, AD dan ART).\n
Berbagai cara dilakukan oleh kelompok kerja untuk menjalin komunikasi dan bersosialisasi ke seantero negeri, diantaranya dengan memanfaatkan jaringan media sosial (social media network) facebook dengan membuat FanPage Generasi Baru Indonesia (GenBI) yang di launching tepat pada tanggal 17 Agustus 2011.\n
Semangat pembentukan Komunitas Mahasiswa Penerima Beasiswa Bank Indonesia bergulir ke berbagai daerah melalui kegiatan pertemuan umum yang juga di isi dengan Learning Forum dalam bentuk Dialog dan Diskusi Terbuka yang membahas kondisi terkini di bidang makro dan mikro ekonomi serta sosial-politik dengan narasumber yang kompeten di bidangnya\n
Komunitas Mahasiswa Penerima Beasiswa Bank Indonesia (Generasi Baru Indonesia) akan dibentuk di seluruh Perguruan Tinggi dimana ada Mahasiswa Penerima Beasiswa Bank Indonesia sebagai wahana serta sarana pengembangan kepemimpinan mahasiswa berbasis kampus yang diperuntukan dan dikelola oleh para Mahasiswa Penerima Beasiswa Bank Indonesia dalam rangka akselerasi dan optimalisasi potensi bibit – bibit unggul muda Indonesia yang memiliki beragam latar belakang bidang keahlian dan peminatan dengan harapan dapat melahirkan para pemimpin bangsa (future leader) yang memiliki kemampuan serta wawasan yang lebih luas dan komprehensif untuk menjawab berbagai tantangan kehidupan dunia dimasa depan.\n
Generasi Baru Indonesia juga bertujuan untuk meningkatkan kepekaan sosial serta menumbuhkan semangat dan jiwa pengabdian terhadap masyarakat sehingga para Mahasiswa Penerima Beasiswa Bank Indonesia dapat menjadi pemimpin yang menjulang keatas dan mampu mengakar ke bawah hingga terbangunnya mental pembelajaran yang bertitik pada proses perbaikan diri yang berkelanjutan.</string>
    <string name="assalamualaikum">Assalamualaikum WR WB
\nSalam Sejahtera</string>
    <string name="quote_sambutan">kita tidak selalu bisa membangun masa depan untuk generasi muda,
tapi kita dapat membangun generasi muda untuk masa depan”
Franklin D. Roosevel (1882 – 1945)</string>
    <string name="inti_sambutan">\nSemoga kita semua senantiasa mendapat kekuatan, keberkahan dan dalam lindungan Tuhan yang Maha Kuasa. Sebagai salah satu bentuk komitmen dan konsistensi kepedulian dalam mendukung kemajuan serta peningkatan kualitas pendidikan anak bangsa, Bank Indonesia memberikan Beasiswa kepada mahasiswa dari berbagai Perguruan Tinggi Negeri di Indonesia.\n
Beasiswa Bank Indonesia bertujuan untuk memberikan bantuan keuangan (tuition fee) kepada mahasiswa yang secara ekonomi kurang mampu namun memiliki prestasi akademik yang baik, bantuan ini terutama untuk membantu menyelesaikan tugas akhir studinya. Program Beasiswa Bank Indonesia yang telah dilaksanakan sejak tahun 2003 ini diberikan kepada mahasiswa dari beragam jurusan/program studi yang dimiliki oleh masing-masing Perguruan Tinggi Negeri dan hingga tahun 2011, program Beasiswa, Bank Indonesia telah memiliki kerjasama dengan 64 Perguruan Tinggi Negeri di berbagai penjuru Indonesia dengan jumlah penerima manfaat sebanyak 3000 mahasiswa/tahun.\n
Mengingat nilai intelektualitas mahasiswa yang dapat menjadi pilar untuk mewujudkan posisi strategis sebagai pengampu peran akademis, peran moral dan peran sosial, maka potensi para mahasiswa ini haruslah di wadahi dalam bentuk komunitas yang aktif, dinamis dan progresif sebagai sarana komunikasi, interaksi dan saling menginspirasi, memotivasi serta menjalin sinergi antar sesama mahasiswa penerima Beasiswa Bank Indonesia hingga bisa membentuk calon pemimpin bangsa di masa depan (future leader).\n
Berbekal semangat pengabdian, keunggulan, inovasi, keterbukaan dan konektifitas yang dimiliki oleh Komunitas Mahasiswa Penerima Beasiswa Bank Indonesia, Saya yakin dan percaya akan Generasi Baru Indonesia (GenBI) sebagai Harapan Masa Depan Bangsa.</string>
    <string name="wassalamualaikum">Wassalamualaikum WR WB
\nDR. Darmin Nasution</string>
    <string name="awal_ikrar">Kami : Generasi Baru Indonesia</string>
    <string name="inti_ikrar">KAMI ADALAH ANAK - ANAK BANGSA YANG BERJIWA MUDA, PENUH KEBANGGAAN, PERCAYA DIRI DAN BERPRESTASI\n
KAMI BANGGA DENGAN KEKAYAAN DAN KELUHURAN WARISAN BUDAYA INDONESIA\n
DAN YAKIN BAHWA KEJAYAAN INDONESIA YANG LEBIH BESAR MASIH MENANTI DI MASA DEPAN\n
SEMANGAT KAMI ADALAH PENGABDIA, KEUNGGULAN, INOVASI, KONEKTIFITAS DAN KETERBUKAAN\n
KAMI INGIN RELEVAN DITENGAH PERUBAHAN DAN MELETAKAN DASAR UNTUK KEMAJUAN MASA DEPAN\n
KAMI YAKIN NILAI - NILAI INILAH YANG MEMBANGKITKAT INDONESIA\n

GENERASI KAMI BERORIENTASI PADA PELUANG DAN DIPACU OLEH ENERGI POSITIF\n
KAMI BERPANDANGAN BAHWA PERUBAHAN YANG TERPENTING ADALAH MODERNISASI CARA PANDANG, KARENA INDONESIA SAAT INI HARUS MEMILIKI WAWASAN BERVISI GUNA MENJAWAB BERBAGAI TANTANGAN BARU YANG BELUM TERPIKIRKAN OLEH GENERASI PENDAHULU\n
KARENA ITULAH KAMI INGIN TERUS MEMBANTU MEMBUKA PIKIRAN BANGSA\n
KAMI INGIN AGARA INDONESIA TIDAK HANYA MENJALANI REFORMASI, NAMU JUGA MENGALAMI TRANSFORMASI\n
GENERASI KAMI MENGANGGAP KEBANGSAAN INDONESIA, KEBHINEKAAN, DEMOKRASI DAN PLURALISME\n
SEBAGAI DARAH DAGING KAMI YANG ALAMI\n
GENERASI KAMI TIDAK TAKUT DENGAN PERUBAHAN : KAMI JUSTRU MERASA TERPACU DENGAN PERUBAHAN\n
KAMI SELALU MENCARI IDE DAN INOVASI BARU DAN YAKIN BAHWA PERUBAHAN YANG BERKESINAMBUNGAN ADALAH KUNCI KESUKSESAN BANGSA\n
KAMI AKAN SELALU MENJAGA GELORA NASIONALISME\n
KAMI PERCAYA BAHWA KINI ANCAMAN BANGSA YANG PALING NYATA ADALAH KORUPSI, KEBODOHAN, KETIDAK-PEDULIAN, POTENSI KONFLIK, MARGINALISASI, EKSTRIMISME. TERORISME DAN KETIDAK-MAMPUAN MEMBACA TANDA ZAMAN\n
DALAM KURUN WAKTU SATU GENERASI, KAMI INGIN INDONESIA ADA JUTAAN CENDIKIAWAN. RIBUAN PUSAT KEUNGGULAN DAN TAMPILNYA KOMUNITAS BESAR ILMU PENGETAHUAN YANG CEMERLANG DAN DINAMIS\n
DALAM SATU GENERASI. KAMI INGIN INDONESIA MEMPUNYAI LIMA JUTA PENGUSAHA\n
MENJADI SALAH SATU EKONOMI UNGGUL YANG PALING KOMPETITIF DI DUNIA\n
HANDAL BERADAPTASI DAN MERAIH KEUNTUNGAN DARI ARUS GLOBALISASI, DENGAN KEMAKMURAN YANG MERATA DARI SABANG SAMPAI MERAUKE\n
KAMI INGIN MENJADI INSPIRASI, MOTIVASI DAN ENERGI BAGI NEGERI\n
GENERASI KAMI INGIN MENUROH PRESTASI SENDIRI, MENCETAK PAHLAWAN MASA KINI\n
DAN MEMPUNYAI CAPAIAN SEJARAH SENDIRI\n
DENGAN SEMANGAT DEMOKRASI DAN REFORMASI BERLANDASKAN JIWA NASIONALISME KAMI AKAN BERSINERGI UNTUK MEN-TRANSFORMASIKAN INDONESIA MENJADI SEBUAH BANGSA YANG BESAR DI MASA DEPAN</string>
    <string name="akhir_ikrar">ATAS NAMA MAHASISWA PENERIMA BEASISWA BANK INDONESIA</string>
    <string name="tanggal_ikrar">11 november 2011  (11 – 11 – 11)</string>
    <string name="komentar_yudilatif">Program Beasiswa untuk ribuan mahasiswa Indonesia yang di jalankan oleh Bank Indonesia (BI) merupakan bentuk nyata konsistensi kepedulian BI dalam membentuk Karakter Bangsa menuju Negara Paripurna</string>
    <string name="komentar_a">Program Beasiswa Bank Indonesia (BI) sangat membantu saya dalam mengembangkan Kelompok Usaha Ekonomi Produktif di bidang Peternakan Ikan. saya berharap program seperti ini dapat meningkatkan kemandirian kami sebagai mahasiswa.</string>
</resources>
