<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="bankindonesia.genbi.SiapaKami">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/text_title_siapakami"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Siapa Kami"
                    style="@style/TextTitle"/>
                <LinearLayout
                    android:layout_below="@id/text_title_siapakami"
                    android:id="@+id/line_generasibaruindonesia"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/rounded_button_siapa_kami">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="9"
                        android:text="Generasi Baru Indonesia"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:gravity="center"/>
                    <ImageView
                        android:id="@+id/down_arrow_generasibaruindo"
                        android:src="@drawable/down_arrow"
                        android:padding="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_below="@+id/line_generasibaruindonesia"
                    android:id="@+id/line_generasibaruindonesia_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/rounded_button_siapa_kami_text_desc">
                    <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/desc_gen_baru_indo"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:gravity="left"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_below="@+id/line_generasibaruindonesia_text"
                    android:id="@+id/line_sambutangubernurbi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/rounded_button_siapa_kami">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="9"
                        android:text="Sambutan Gubernur Bank Indonesia"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:gravity="center"/>
                    <ImageView
                        android:id="@+id/down_arrow_sambutangubernur"
                        android:src="@drawable/down_arrow"
                        android:padding="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_below="@+id/line_sambutangubernurbi"
                    android:id="@+id/line_sambutangubernurbi_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_button_siapa_kami_text_desc"
                    android:orientation="vertical">
                    <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/assalamualaikum"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="left"/>
                    <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/quote_sambutan"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:gravity="right"/>
                    <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/inti_sambutan"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:gravity="left"/>
                    <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/wassalamualaikum"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="left"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_below="@+id/line_sambutangubernurbi_text"
                    android:id="@+id/line_ikrar_genbi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/rounded_button_siapa_kami">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="9"
                        android:text="Ikrar"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:gravity="center"/>
                    <ImageView
                        android:id="@+id/down_arrow_ikrar_genbi"
                        android:src="@drawable/down_arrow"
                        android:padding="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_below="@+id/line_ikrar_genbi"
                    android:id="@+id/line_ikrar_genbi_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_button_siapa_kami_text_desc"
                    android:orientation="vertical">
                    <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/awal_ikrar"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"/>
                    <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/inti_ikrar"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textAllCaps="true"
                        android:gravity="center_horizontal"/>
                    <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/akhir_ikrar"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"/>
                    <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/tanggal_ikrar"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

            </RelativeLayout>
        </ScrollView>


    </RelativeLayout>
    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>

</android.support.v4.widget.DrawerLayout>
